[gd_scene load_steps=2 format=3 uid="uid://bph3wk8yqxfda"]

[ext_resource type="Script" path="res://ui/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Lbl" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 35.0
text = "Enemies: 0"

[node name="FireRate" type="Label" parent="."]
offset_left = 10.0
offset_top = 35.0
offset_right = 200.0
offset_bottom = 60.0
text = "Fire Rate: 5.6 shots/s"

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 10.0
offset_top = 65.0
offset_right = 210.0
offset_bottom = 85.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 67.0
offset_right = 210.0
offset_bottom = 83.0
text = "HP: 100 / 100"
horizontal_alignment = 1
